v1 of LL Website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Little Lemon</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel="stylesheet" href="styles.css">
+        <title>Little Lemon</title>
+    </head>
+
+    <body>
+        <header>
+            <a href="index.html">
+                <img src="assets/logo-full-color.png" alt="Little Lemon Logo">
+            </a>
+        </header>
+
+        <nav>
+            <ul id="navbar">
+                <li>
+                    <a href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        Menu
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        Reservations
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        About Us
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <main>
+            <br>
+            <section>
+                <article id="hero">
+                    <a href="#" style="color: white;">
+                        <img src="assets/Hero.jpg" alt="Little Lemon Signature Dish - Pasta Aglio e olio">
+                        <div id="herobg">
+                            <h1>Book a table today
+                                and get 10% off!</h1>
+                        </div>
+                    </a>
+                </article>
+            </section>
+            <br>
+            <section id="sec2">
+                <article>
+                    <img src="assets/resto.jpg" alt="Little Lemon Restaurant Main Room">
+                    <div class="art2">
+                        <h2>Rustic Atmosphere</h2>
+                        <p>The restaurant has a rustic and relaxed atmosphere, transporting you to the Italian countryside</p>
+                    </div>
+                </article>
+                <br>
+                <article>
+                    <img src="assets/menu.jpg" alt="Little Lemon Menu">
+                    <div class="art2">
+                        <h2>Small Menu</h2>
+                        <p>A seasonal menu curated by Chef Mario to bring the freshest ingredients to your plate, all year round</p>
+                    </div>
+                </article>
+                <br>
+                <article>
+                
+                    <img src="assets/medi.jpg" alt="Mediterranean Scenery">
+                    <div class="art2">
+                        <h2>Mediterranean on your plate</h2>
+                        <p>Inspired by Italian, Turkish and Greek cuisine and culture</p>
+                    </div>
+                </article>
+                <br>
+
+            </section>
+        </main>
+        <br>
+
+        <footer>
+            <div>
+                <img src="assets/logo-notext-color.png" alt="Little Lemon Logo" width="30px" style="justify-content: center;">
+            </div>
+            <div>
+                <small>
+                    <a href="#">Little Lemon © 2023</a>
+                </small>
+            </div>
+        </footer>
+    </body>
+
 </html>
